--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,7 @@
     "echarts": "^3.8.5",
     "iview": "^2.8.0",
     "mavon-editor": "^2.4.13",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^3.0.1",
