--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "html-minifier": "^3.5.15",
+    "moment": "^2.22.2",
     "qiniu": "^7.1.3",
     "think-cache": "^1.0.0",
     "think-cache-file": "^1.0.8",
